Query compositing state only from UpdateAnimationState

https://codereview.chromium.org/2029323003 attempted to add an optimization
that would run an animation on the MT by querying m_scrollableArea->
shouldScrollOnMainThread. This was wrong because we were querying compositing
state outside of the CompositingClean state.

This reverts that CL.

The original bug was not fixed in the CL that this reverts and that CL was
just wrong.

This CL doesn't have a behavioral change.

BUG=639100

Review-Url: https://codereview.chromium.org/2338913002
Cr-Commit-Position: refs/heads/master@{#418596}

Former-commit-id: 2153328998af9d61ff8d7743a2f5bc74f889e7f3